--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
       </h1>
       <div class="description">
         <h2 class="title-decor">
-          <p>Что делать, когда не можешь делать ничего</p>
-        <p>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+          <span>Что делать, когда не можешь делать ничего</span><br>
+          <span>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</span>
         </h2>
       </div>
     </header>
