--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
     </header>
     <main class="main">
-      <section class="main-content-first">
+      <section class="main-content-why">
         <h2 class="title">Почему сосредоточиться так сложно</h2>
         <div class="card-list">
           <div class="card">
@@ -98,9 +98,9 @@
           </div>
         </div>
       </section>
-      <section class="main-content-second">
-        <h2 class="title second-title">Что снижает концентрацию внимания?</h2>
-        <div class="card-list second-list">
+      <section class="main-content-what">
+        <h2 class="title what-title">Что снижает концентрацию внимания?</h2>
+        <div class="card-list what-list">
           <div class="card">
             <div class="text-decor">
               <h3 class="title-decor">
@@ -154,20 +154,20 @@
           </div>
         </div>
       </section>
-      <section class="main-content-third">
+      <section class="main-content-how">
         <h2 class="title">Как концентрироваться лучше, чем золотая рыбка 
           (то есть дольше трёх секунд)</h2>
         <div class="card-list">
           <div class="text-decor">
-            <h2 class="title-sub-decor">
+            <h3 class="title-sub-decor">
               5 простых (на самом деле не очень) советов
-            </h2>
+            </h3>
           </div>
           <div class="card">
             <div class="text-decor">
-              <h3 class="subtitle-decor">
+              <h4 class="subtitle-decor">
                 Представьте небо и облака
-              </h3>
+              </h4>
             </div>
             <div class="main-text">
               <p>
@@ -254,35 +254,35 @@
         <div class="picture-list">
           <img 
           src="../images/sunset.png"
-          class="picture picture-first"
+          class="picture picture-sunset"
           alt="Пейзаж с моерм и закатом"
           loading="lazy"
           >
           <img 
           src="../images/ice-cream.png"
-          class="picture picture-second"
+          class="picture picture-ice"
           alt="Морожное"
           loading="lazy"
           >
           <img 
           src="../images/tape.png"
-          class="picture picture-third"
+          class="picture picture-tape"
           alt="аудио касета"
           loading="lazy">
           <img 
           src="../images/books.png"
-          class="picture picture-fourth"
+          class="picture picture-books"
           alt="Книги"
           loading="lazy">
           <img 
           src="../images/street.png"
-          class="picture picture-fifth"
+          class="picture picture-street"
           alt="Улица"
           loading="lazy">
         </div> 
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer decorated-zone">
       <h4 class="footer_title text-shadow">
         focus
       </h4>
