LastUpdate index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body class="page">
     <header class="header decorated-zone">
       <div class="header__first-decoration">
-        <p class="header__text-decor">rec</p> <!--Понять, как скрыть при светлой теме-->
+        <p class="header__text-decor">rec</p>
       </div>
       <nav class="header__theme-menu">
         <ul class="header__theme-menu-list">
@@ -253,29 +253,29 @@
         </h2>
         <div class="picture-list">
           <img 
-          src="../images/sunset.png"
+          src="./images/sunset.png"
           class="picture picture-sunset"
           alt="Пейзаж с моерм и закатом"
           loading="lazy"
           >
           <img 
-          src="../images/ice-cream.png"
+          src="./images/ice-cream.png"
           class="picture picture-ice"
           alt="Морожное"
           loading="lazy"
           >
           <img 
-          src="../images/tape.png"
+          src="./images/tape.png"
           class="picture picture-tape"
           alt="аудио касета"
           loading="lazy">
           <img 
-          src="../images/books.png"
+          src="./images/books.png"
           class="picture picture-books"
           alt="Книги"
           loading="lazy">
           <img 
-          src="../images/street.png"
+          src="./images/street.png"
           class="picture picture-street"
           alt="Улица"
           loading="lazy">
