h4 Update index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <div class="header__first-decoration">
+      <div class="header__decoration">
         <p class="header__text-decor">rec</p>
       </div>
       <nav class="header__theme-menu">
@@ -56,7 +56,7 @@
       </div>
     </header>
     <main class="main">
-      <section class="main-content-why">
+      <section class="content-section main-content-why">
         <h2 class="title">Почему сосредоточиться так сложно</h2>
         <div class="card-list">
           <div class="card">
@@ -98,7 +98,7 @@
           </div>
         </div>
       </section>
-      <section class="main-content-what">
+      <section class="content-section main-content-what">
         <h2 class="title what-title">Что снижает концентрацию внимания?</h2>
         <div class="card-list what-list">
           <div class="card">
@@ -154,7 +154,7 @@
           </div>
         </div>
       </section>
-      <section class="main-content-how">
+      <section class="content-section main-content-how">
         <h2 class="title">Как концентрироваться лучше, чем золотая рыбка 
           (то есть дольше трёх секунд)</h2>
         <div class="card-list">
@@ -184,9 +184,9 @@
           </div>
           <div class="card">
             <div class="text-decor">
-              <h3 class="subtitle-decor">
+              <h4 class="subtitle-decor">
                 Включите музыку
-              </h3>
+              </h4>
             </div>
             <div class="main-text">
               <p>
@@ -199,9 +199,9 @@
           </div>
           <div class="card">
             <div class="text-decor">
-              <h3 class="subtitle-decor">
+              <h4 class="subtitle-decor">
                 Прогуляйтесь
-              </h3>
+              </h4>
             </div>
             <div class="main-text">
               <p>
@@ -216,9 +216,9 @@
           </div>
           <div class="card">
             <div class="text-decor">
-              <h3 class="subtitle-decor">
+              <h4 class="subtitle-decor">
                 Хорошо ешьте
-              </h3>
+              </h4>
             </div>
             <div class="main-text">
               <p>
@@ -231,9 +231,9 @@
           </div>
           <div class="card">
             <div class="text-decor">
-              <h3 class="subtitle-decor">
+              <h4 class="subtitle-decor">
                 Читайте
-              </h3>
+              </h4>
             </div>
             <div class="main-text">
               <p>
